--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,64 +3,89 @@
   
 }
 #container {
-    width: 960px;
-    text-align: left;
-    margin: 0 auto;
+    margin-right: 10%;
+    text-align: right;
+    margin-left: 10%;
 }
 
-#sidebar {
-    width: 270px;
-    float: right;
-    padding: 20px;
-    text-align: center;
-    background-color: #fff;
-    border: 2px solid #dddddd;
-}
+
 
 #header {
     width: 960px;
-    padding: 20px;
-    text-align: right;
-    color: #4aaaa5;
-    background-color: #fff;
     border: 2px solid #ccc;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 #jaime {
-    float: left;
-    color: #4aaaa5;
+    color: white;
+    margin-right: 90%;
+    position: relative;
+    padding: 10px 10px 10px 10px;
+    left: 0px;
+    background-color: teal;
+    font-weight:      bold;
+    font-size: 60px;
+    font-family: 'Georgia', Times, Times New Roman, serif; 
 }
+
+a {
+    font-size: 20px;
+    text-decoration:  none;
+    color: #777;
+    padding-right: 15px;
+
+}
+
 
 #footer {
     width: 960px;
     text-align: center;
-    color: teal;
+    color: white;
     background-color: #666;
     clear: both;
-    padding: 20px;
+    padding: 10px 10px 10px 10px;
 }
 
 #content {
     width: 650px;
     float: left;
     text-align: left;
-    padding: 20px;
+    padding: 10px 10px 10px 10px;
     margin-bottom: 20px;
+
+    
     background-color: #fff;
     border: 2px solid #dddddd;
 }
 
+#sidebar {
+    width: 270px;
+    float: left;
+    padding: 1px 1px 1px 1px;
+    text-align: center;
+    background-color: #fff;
+    border: 2px solid #dddddd;
+    margin-left: 20px;
+}
+
 #navigation li {
     display: inline;
+
+
+}
+img {
+    padding: 10px 10px 10px 10px;
 }
 
 h2 {
     color: #4aaaa5;
+    padding: 10px 10px 10px 10px;
     font-family: 'Georgia', Times, Times New Roman, serif; 
 }
 
 p {
     color: #777;
+    padding: 10px 10px 10px 10px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
@@ -70,4 +95,40 @@ body {
 
 .clearfix {
     overflow: auto;
+}
+
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+}
+
+input[type=submit] {
+    background-color: teal;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+
+.container {
+    border-radius: 5px;
+    background-color: ;
+    padding: 20px;
+}
+
+label {
+
+    color: #777;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
