--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,30 +6,33 @@
     margin-right: 10%;
     text-align: right;
     margin-left: 10%;
+    background-image: url("../images/regal.png");
+    width: 960px;
 }
 
 
 
 #header {
     width: 960px;
-    border: 2px solid #ccc;
+    border: 1px solid #ccc;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    background-color: white;
 }
 
 #jaime {
     color: white;
-    margin-right: 90%;
     position: relative;
-    padding: 10px 10px 10px 10px;
-    left: 0px;
+    padding: 18px 18px;
+    left: -500px;
+    bottom: 1px;
     background-color: teal;
     font-weight:      bold;
-    font-size: 60px;
+    display: inline-block;
     font-family: 'Georgia', Times, Times New Roman, serif; 
 }
 
 a {
-    font-size: 20px;
+    font-size: 12px;
     text-decoration:  none;
     color: #777;
     padding-right: 15px;
@@ -65,11 +68,12 @@ a {
     text-align: center;
     background-color: #fff;
     border: 2px solid #dddddd;
-    margin-left: 20px;
+    margin-left: 40px;
 }
 
 #navigation li {
     display: inline;
+
 
 
 }
