--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
     margin-right: 10%;
     text-align: right;
     margin-left: 10%;
-    background-image: url("../images/regal.png");
+    background-image: url("../images/concrete-texture.png");
     width: 960px;
 }
 
@@ -23,20 +23,15 @@
     color: white;
     position: relative;
     padding: 18px 18px;
-    left: -500px;
+    left: -533px;
     bottom: 1px;
-    background-color: teal;
+    background-color: #4aaaa5;
     font-weight:      bold;
     display: inline-block;
     font-family: 'Georgia', Times, Times New Roman, serif; 
 }
 
-a {
-    font-size: 12px;
-    text-decoration:  none;
-    color: #777;
 
-}
 
 
 #footer {
@@ -45,8 +40,8 @@ a {
     color: white;
     background-color: #666;
     clear: both;
-    padding: 10px 10px 10px 10px;
-    border: 1px solid #ddd;
+    padding: 10px 10px;
+    border-top: solid 5px #4aaaa5;
 }
 
 #content {
@@ -57,12 +52,12 @@ a {
     margin-bottom: 20px;
     background-color: #fff;
     border: 1px solid #ddd;
+    overflow: scroll;
 }
 
 #sidebar {
     width: 270px;
     float: left;
-    padding: 1px 1px 1px 1px;
     text-align: center;
     background-color: #fff;
     border: 1px solid #ddd;
@@ -71,7 +66,6 @@ a {
 
 #navigation li {
     display: inline;
-    padding-right: 20px;
 }
 
 
@@ -82,18 +76,15 @@ img {
 
 h2 {
     color: #4aaaa5;
-    padding: 10px 10px 10px 10px;
+    padding: 20px 20px;
     font-family: 'Georgia', Times, Times New Roman, serif; 
 }
 
 p {
     color: #777;
-    padding: 10px 10px 10px 10px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    font-size: 26px;
-    text-overflow: left;
+    font-size: 20px;
 }
-
 
 .clearfix {
     overflow: auto;
@@ -120,11 +111,10 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: #666;
 }
 
 .container {
-    border-radius: 5px;
     background-color: ;
     padding: 20px;
 }
@@ -135,11 +125,27 @@ label {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
-#cat {
-    width: 150px;
+#folders {
     display: inline-block;
+    margin: auto;
+    border: 3px solid #4aaaa5; 
+    width: 200px;
+    margin:20px;
 }
 
 #side{
     padding-right: 20px;
 }
+
+img:hover { background-color: #4aaaa5; }
+
+a {
+    font-size: 16px;
+    text-decoration:  none;
+}
+
+a:link { color: grey; }
+a:visited { color: grey; }
+a:hover { color: purple; }
+a:active { color: lavender; }
+
