--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,43 +1,37 @@
+/* Centers Page */
 * {
   box-sizing: border-box;
   
 }
-/* body margin of zero */
-
+/* Sets div within div in center page */
 #center{
     margin: 0 auto;
     width: 960px;
 }
 
+/* sets background in container div */
 #container {
-    text-align: right;
     background-image: url("../images/concrete-texture.png");
-    width: 100%;
+    
 }
 
 
-
+/* used flex box to align div within divs */
 #header {
     width: 100%;
     border: 1px solid #ccc;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    background-color: white;
+    background-color: #fff;
     display: flex;
-    /* justify-content: space-between; */
     align-items: center;
-    /* justify-content: center; */
     justify-content: space-around;
 }
 
 #jaime {
     color: white;
-    position: relative;
     padding: 18px 18px;
-    /* left: -805px; */
-    /* bottom: 1px; */
     background-color: #4aaaa5;
     font-weight:      bold;
-    /* display: inline-block; */
     font-family: 'Georgia', Times, Times New Roman, serif; 
 }
 
@@ -55,7 +49,7 @@
     width: 650px;
     float: left;
     text-align: left;
-    padding: 10px 10px 10px 10px;
+    padding: 20px 20px;
     margin-bottom: 20px;
     background-color: #fff;
     border: 1px solid #ddd;
@@ -69,6 +63,8 @@
     background-color: #fff;
     border: 1px solid #ddd;
     margin-left: 40px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 #navigation li {
@@ -77,13 +73,13 @@
 
 
 img {
-    padding: 20px 20px;
+    margin: 19px 19px;
     float: left;
+    
 }
 
 h2 {
     color: #4aaaa5;
-    padding: 20px 20px;
     font-family: 'Georgia', Times, Times New Roman, serif; 
 }
 
@@ -91,10 +87,6 @@ p {
     color: #777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 16px;
-}
-
-.clearfix {
-    overflow: auto;
 }
 
 input[type=text], select, textarea {
@@ -117,16 +109,11 @@ input[type=submit] {
     cursor: pointer;
 }
 
-input[type=submit]:hover {
-    background-color: #666;
-}
-
 .container {
     padding: 20px;
 }
 
 label {
-
     color: #777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
@@ -134,16 +121,11 @@ label {
 #folders {
     display: inline-block;
     margin: auto;
-    border: 3px solid #4aaaa5; 
+    border: 3px solid #777; 
     width: 200px;
-    margin:20px;
+    margin-left:60px;
+    margin-top: 10px;
 }
-
-#side{
-    padding-right: 20px;
-}
-
-img:hover { background-color: #4aaaa5; }
 
 a {
     font-size: 16px;
@@ -154,4 +136,5 @@ a:link { color: grey; }
 a:visited { color: grey; }
 a:hover { color: purple; }
 a:active { color: lavender; }
+img:hover { background-color: #4aaaa5; }
 
